--- a/bioskop.html
+++ b/bioskop.html
@@ -6,6 +6,7 @@
     <meta charset='UTF-8'>
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="author" content="Borisav Bogdanovic">
+    <link rel="shortcut icon" href="img/bb.png" />
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 </head>
@@ -43,13 +44,22 @@
                         <div class="dropdown-divider"></div>
                         <a class="dropdown-item" target="_blank" href="http://cinegrand-mcf.rs/na-repertoaru-danas">Cine
                             Grand</a>
+                        <div class="dropdown-divider"></div>
+                        <a class="dropdown-item" target="_blank" href="http://www.bioskopfontana.rs/">Fontana</a>
+                        <div class="dropdown-divider"></div>
+                        <a class="dropdown-item" target="_blank" href="http://tuck.rs/cms/view.php?id=109">Tuckwood</a>
+                        <div class="dropdown-divider"></div>
+                        <a class="dropdown-item" target="_blank"
+                            href="http://akademija28.com/%D0%B1%D0%B8%D0%BE%D1%81%D0%BA%D0%BE%D0%BF/">Akademija 28</a>
+                        <div class="dropdown-divider"></div>
                     </div>
                 </li>
             </ul>
 
         </div>
     </nav>
-    <div class="jumbotron jumbotron-fluid">
+    <div class="jumbotron jumbotron-fluid" style="height: 150px;">
+
         <div class="container">
             <h1 class="display-4 text-center font-weight-bold">Vodič kroz Beogradske bioskope</h1>
         </div>
@@ -63,39 +73,41 @@
                 <li data-target="#carouselExampleIndicators" data-slide-to="3"></li>
                 <li data-target="#carouselExampleIndicators" data-slide-to="4"></li>
             </ol>
+
+            <div class="carousel-inner">
+                <div class="carousel-item active">
+                    <img src="img/bio/aquaman_wide.jpg" class="d-block w-100" alt="Aquaman">
+                </div>
+                <div class="carousel-item">
+                    <img src="img/bio/replicas1024x576.jpg" class="d-block w-100" alt="Replicas">
+                </div>
+                <div class="carousel-item">
+                    <img src="img/bio/ladies-in-black1450x500.jpg" class="d-block w-100" alt="Ladies in Black">
+                </div>
+                <div class="carousel-item">
+                    <img src="img/bio/us1651x702.jpg" class="d-block w-100" alt="us">
+                </div>
+                <div class="carousel-item">
+                    <img src="img/bio/psi870x433.png" class="d-block w-100" alt="Psi umiru sami">
+                </div>
+            </div>
+            <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="sr-only">Previous</span>
+            </a>
+            <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="sr-only">Next</span>
+            </a>
         </div>
-        <div class="carousel-inner">
-            <div class="carousel-item active">
-                <img src="img/bio/aquaman_wide.jpg" class="d-block w-100" alt="Aquaman">
-            </div>
-            <div class="carousel-item">
-                <img src="img/bio/replicas1024x576.jpg" class="d-block w-100" alt="Replicas">
-            </div>
-            <div class="carousel-item">
-                <img src="img/bio/ladies-in-black1450x500.jpg" class="d-block w-100" alt="Ladies in Black">
-            </div>
-            <div class="carousel-item">
-                <img src="img/bio/us1651x702.jpg" class="d-block w-100" alt="us">
-            </div>
-            <div class="carousel-item">
-                <img src="img/bio/psi870x433.png" class="d-block w-100" alt="Psi umiru sami">
-            </div>
-        </div>
-        <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
-            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-            <span class="sr-only">Previous</span>
-        </a>
-        <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
-            <span class="carousel-control-next-icon" aria-hidden="true"></span>
-            <span class="sr-only">Next</span>
-        </a>
     </section>
+
     <div class="jumbotron jumbotron-fluid">
         <div class="container">
             <h1 class="display-4 text-center font-weight-bold">Aktuelno u beogradskim bioskopima</h1>
         </div>
     </div>
-    <div class="media" style="padding-left: 30px; padding-right: 50px;">
+    <div class="media row" style="padding-left: 30px; padding-right: 50px;">
         <img src="img/bio/juzni-vetar.jpg" class="align-self-center mr-3" alt="juzni vetar">
         <div class="media-body" style="border: 1px solid lightgray; padding: 5px;">
             <h6 class="mt-0">Film "Južni vetar" uskoro u beogradskim bioskopima</h6>
@@ -112,7 +124,7 @@
         </div>
     </div>
     <br>
-    <div class="media" style="padding-left: 30px; padding-right: 50px;">
+    <div class="media row" style="padding-left: 30px; padding-right: 50px;">
         <div class="media-body" style="border: 1px solid lightgray; padding: 5px;">
             <h5 class="mt-0 mb-1">ROĐENDAN BIOSKOPA CINEPLEXX – VELIKO SNIŽENJE ULAZNICA</h5>
             Povodom proslave svog rođendana bioskop Cineplexx je danas snizio cene karata i prodavaće se u bioskopima u
@@ -126,7 +138,7 @@
         <img src="img/bio/cineplexx.jpg" class="align-self-center ml-3" alt="Cineplexx">
     </div>
     <br>
-    <div class="media" style="padding-left: 30px; padding-right: 50px;">
+    <div class="media row" style="padding-left: 30px; padding-right: 50px;">
         <img src="img/bio/logo.png" class="align-self-center mr-3" alt="juzni vetar">
         <div class="media-body" style="border: 1px solid lightgray; padding: 5px;">
             <h6 class="mt-0">Kako se prijaviti za radionicu?</h6>
@@ -144,7 +156,7 @@
         </div>
     </div>
     <br>
-    <div class="media" style="padding-left: 30px; padding-right: 50px;">
+    <div class="media row" style="padding-left: 30px; padding-right: 50px;">
         <div class="media-body" style="border: 1px solid lightgray; padding: 5px;">
             <h5 class="mt-0 mb-1">FEST 2019</h5>
             Prvi FEST, sa podnaslovom "Hrabri novi svet", otvoren je 9. januara 1971. u Domu Sindikata, projekcijom
@@ -166,7 +178,7 @@
         <img src="img/bio/fest2019.jpg" class="align-self-center ml-3" alt="Cineplexx">
     </div>
     <br>
-    <div class="media" style="padding-left: 30px; padding-right: 50px;">
+    <div class="media row" style="padding-left: 30px; padding-right: 50px;">
         <img src="img/bio/akademija-28.jpg" class="align-self-center mr-3" alt="juzni vetar">
         <div class="media-body" style="border: 1px solid lightgray; padding: 5px;">
             <h6 class="mt-0">Akademija 28 - Nemanjina 28, Beograd</h6>
@@ -187,7 +199,7 @@
         </div>
     </div>
     <br>
-    <div class="media" style="padding-left: 30px; padding-right: 50px;">
+    <div class="media row" style="padding-left: 30px; padding-right: 50px;">
         <div class="media-body" style="border: 1px solid lightgray; padding: 5px;">
             <h5 class="mt-0 mb-1">FESTIVAL SRPSKOG FILMA FANTASTIKE</h5>
             Dvanaesti Festival srpskog filma fantastike svečano će biti otvoren u četvrtak, 25. oktobra u Studentskom
@@ -216,7 +228,7 @@
         <img src="img/bio/fsff-logo-2.png" class="align-self-center ml-3" alt="Cineplexx">
     </div>
     <br>
-    <div class="media" style="padding-left: 30px; padding-right: 50px;">
+    <div class="media row" style="padding-left: 30px; padding-right: 50px;">
         <img src="img/bio/sumadija_kg.jpg" class="align-self-center mr-3" alt="zvezda">
         <div class="media-body" style="border: 1px solid lightgray; padding: 5px;">
             <h6 class="mt-0">Подршка државе за реконструкцију дворане Шумадија</h6>
@@ -238,7 +250,7 @@
         </div>
     </div>
     <br>
-    <div class="media" style="padding-left: 30px; padding-right: 50px;">
+    <div class="media row" style="padding-left: 30px; padding-right: 50px;">
         <div class="media-body" style="border: 1px solid lightgray; padding: 5px;">
             <h5 class="mt-0 mb-1">Jedni srpski predstavnik na Filmskom festivalu u Kanu, „Teret“,</h5>
             Najnagrađivaniji srpski film ove godine i jedni srpski predstavnik na Filmskom festivalu u Kanu, „Teret“, od
@@ -259,7 +271,7 @@
             Od 6. decembra „Teret“ će se naći na repertoaru bioskopa Fontana, a prvo gostovanje van glavnog grada imaće
             na reviji Autorskog festivala u Subotici od 6. decembra,
         </div>
-        <img src="img/bio/teret.jpg" class="align-self-center ml-3" alt="teret">
+        <img src="img/bio/teret.jpg" class="img-responsive align-self-center ml-3" alt="teret">
     </div>
     <br>
     <div class="jumbotron jumbotron-fluid">
@@ -269,14 +281,39 @@
     </div>
     <section>
         <div class="container">
-            <div class="row">
-                <img src="img/bio/zab20oktobar.jpg" class="align-self-center ml-3" alt="teret">
-                <img src="img/bio/zabKozara.jpg" class="align-self-center ml-3" alt="teret">
-                <img src="img/bio/zabVozdovac-1024x638.jpg" class="align-self-center ml-3" alt="teret">
-            </div>
+            <!-- <div class="row text-center"> -->
+            <img src="img/bio/zabdodjijuce.jpg" class="img-thumbnail img-fluid ml-1 mr-5" alt="teret">
+
+
+
+            <!-- </div> -->
+            <br>
             <br>
             <p>Samo još stariji sugrađani se mogu sećati nekadašnjih beogradskih bioskopa koji su poput velikih svetskih
                 bioskopa bili uvek puni, a doći do karte je bila posebna priča.</p>
+            <br>
+            <h6>BIOSKOP 20.OKTOBAR</h6>
+
+            <p>Bioskop 20.oktobar nalazio se u Balkanskoj ulici preko puta hotela Moskav. Pored Kozare bio je jedan od
+                kultnih bioskopa u kojem su se prikazivali uglavnom akcioni filmovi,trileri i borilački filmovi. Bioskop
+                je imao
+                dve dvorane u kojima su se prikazivali različiti filmovi pa su neki koristili priliku kada redar nije tu
+                da
+                plate jedan film a posle da se ušunjaju u drugu dvoranu. I tu su „tapkaroši “ znali da profitiraju kada
+                je
+                bilo dobrih filmova a u to vreme bilo ih je u izobilju.
+
+                Beograd je nekada bio prestonica bioskopa gde su se u određenim bioskopima pokazivali određeni žanrovi
+                ili bili određeni za premijere velikih hitova. Pored navednih bioskopa o kojima se može puno pričati tu
+                su bili i
+                bioskopi: „Sloboda“,“Jedinstvo“, „Sutjeska“,“Avala“…
+
+                Zatvaranje Kozare i 20.oktobra je ono što sigurno će zauvek „boleti“ nas starije jer kultna mesta koja
+                su stvarala istoriju su stala sa svojom istorijom. Kada istorija stane koju istoriju mladost može
+                nastaviti
+                da stvara i održava.</p>
+
+            <img src="img/bio/zab_jadran.jpg" class="img-thumbnail align-self-center  ml-1 mr-5" alt="Jadran">
             <h6>
                 BIOSKOP JADRAN
             </h6>
@@ -286,6 +323,8 @@
                 drame i domaća filmska ostvarenja, pa tako pamtim da je domaći film „Una“ sa Sonjom Savić dugo bio na
                 repertoaru
                 ovog bioskopa od njegovog snimanja.</p>
+
+            <img src="img/bio/zab_odeon.jpg" class="img-thumbnail align-self-center  ml-1 mr-5" alt="Odeon">
 
             <h6>BIOSKOP ODEON</h6>
 
@@ -308,6 +347,11 @@
                 bili
                 uglavnom tadašnji beogradski prevaranti.</p>
 
+            <img src="img/bio/zabzvezda.jpg" class="img-thumbnail align-self-center ml-1 mr-5" alt="teret">
+
+            <br>
+            <br>
+
             <h6>BIOSKOP ZVEZDA</h6>
 
             <p>Bioskop Zvezda nalazi se u ulici Terazije 40 i sem fasade jedino je podsećanje na nekadašnji najbolji
@@ -320,6 +364,9 @@
                 tinejdžerske komedije. Mnogi i danas poznati glumci u komedijama su kao tinejdžeri izgradili karijere.
             </p>
 
+            <img src="img/bio/zabkosmaj.jpg" class="img-thumbnail align-self-center  ml-1 mr-5" alt="Kosmaj">
+            <br>
+            <br>
             <h6>BIOSKOP KOSMAJ</h6>
 
             <p>Bioskop Kosmaj nalazio se u pasažu na Terazijama a na tom mestu se sada nalaze butici. Bioskop je
@@ -329,7 +376,9 @@
                 odgledate neki film tokom redovnog prikazivanja uvek je postojao period kada se našao u bioskopu Kosmaj.
                 Bioskop
                 neradi od 2005 ili 2006.godine.</p>
-
+            <img src="img/bio/zab_partizan.jpg" class="img-thumbnail align-self-center  ml-1 mr-5" alt="teret">
+            <br>
+            <br>
             <h6>BIOSKOP PARTIZAN</h6>
 
             <p>Bioskop Partizan zatvoren je početkom 2004.godine a nalazio se preko puta Železničke stanice. Tokom
@@ -350,7 +399,14 @@
                 sugrađani sigurno pamte kada su projekcije u određenim terminima otkazivane ili vraćane pare jer je
                 došlo do
                 tuče. Takođe je bio mesto okupljanja dilera,makroa,narkomana i ostalog „čudnog“ sveta.</p>
-
+            <div class="row">
+                <div class="col-sm-12">
+                    <img src="img/bio/zabbalkan.jpg" class="img-thumbnail align-self-center img-thumbnail ml-1 mr-5"
+                        alt="teret">
+                </div>
+            </div>
+            <br>
+            <br>
             <h6>BIOSKOP BALKAN</h6>
 
             <p>Bisokop Balkan nalazi se u Braće Jugovića 16. Zatvoren je 2010.godine i bilo je nekoliko najava da će se
@@ -360,12 +416,18 @@
                 domaća
                 i
                 strana ostvarenja.</p>
-
+            <img src="img/bio/zab_slavica.jpg" class="img-thumbnail align-self-center  ml-1 mr-5" alt="teret">
+            <br>
+            <br>
             <h6>BIOSKOP SLAVICA</h6>
 
             <p>Biskop Slavica nalazio se na Karaburmi.Naziv je dobio po prvom posleratnom istoimenom filmu. Bioskop je
                 imao
                 raznovrstan filmski program i zatvoren je još devedesetih godina prošlog veka.</p>
+
+            <img src="img/bio/zabVozdovac-1024x638.jpg" class="img-thumbnail align-self-center  ml-1 mr-5" alt="teret">
+            <br>
+            <br>
 
             <h6>BIOSKOP VOŽDOVAC</h6>
 
@@ -376,6 +438,10 @@
                 prepričavale po Beogradu. Ako si hteo da izvedeš devojku u bioskop,što je bio deo izlazaka u to vreme,
                 uglavnom
                 je to bioskop Voždovac u nadi da ćeš postati deo urbane beogradske ljubavne priče.</p>
+
+            <img src="img/bio/zabKozara.jpg" class="img-thumbnail align-self-center ml-1 mr-5" alt="teret">
+            <br>
+            <br>
 
             <h6>BIOSKOP KOZARA</h6>
 
@@ -388,35 +454,21 @@
                 se da su
                 otkupljivali sve karte „preko veze“ i ako si mogao maksimalno da kupiš 4 karte.</p>
 
-            <h6>BIOSKOP 20.OKTOBAR</h6>
+            <br>
 
-            <p>Bioskop 20.oktobar nalazio se u Balkanskoj ulici preko puta hotela Moskav. Pored Kozare bio je jedan od
-                kultnih bioskopa u kojem su se prikazivali uglavnom akcioni filmovi,trileri i borilački filmovi. Bioskop
-                je imao
-                dve dvorane u kojima su se prikazivali različiti filmovi pa su neki koristili priliku kada redar nije tu
-                da
-                plate jedan film a posle da se ušunjaju u drugu dvoranu. I tu su „tapkaroši “ znali da profitiraju kada
-                je
-                bilo dobrih filmova a u to vreme bilo ih je u izobilju.
-
-                Beograd je nekada bio prestonica bioskopa gde su se u određenim bioskopima pokazivali određeni žanrovi
-                ili bili određeni za premijere velikih hitova. Pored navednih bioskopa o kojima se može puno pričati tu
-                su bili i
-                bioskopi: „Sloboda“,“Jedinstvo“, „Sutjeska“,“Avala“…
-
-                Zatvaranje Kozare i 20.oktobra je ono što sigurno će zauvek „boleti“ nas starije jer kultna mesta koja
-                su stvarala istoriju su stala sa svojom istorijom. Kada istorija stane koju istoriju mladost može
-                nastaviti
-                da stvara i održava.</p>
-            <div class="row">
-                <img src="img/bio/zabbalkan.jpg" class="align-self-center ml-3" alt="teret">
-                <img src="img/bio/zabkosmaj.jpg" class="align-self-center ml-3" alt="teret">
-                <img src="img/bio/zabdodjijuce.jpg" class="align-self-center ml-3" alt="teret">
-                <img src="img/bio/zabzvezda.jpg" class="align-self-center ml-3" alt="teret">
-
-            </div>
         </div>
     </section>
+    <footer>
+        <div class="row">
+            <div class="col-sm-6">
+                <a href="#top" class="ml-5">Idi na vrh</a>
+            </div>
+            <div class="col-sm-6">
+                <span class="ml-5">&copy; Борисав Богдановић 2018</span>
+                <img class="mr-5 ml-3" src="img/bb-logo.png" alt="logo">
+            </div>
+        </div>
+    </footer>
 
 
 
