--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
       </div>
       <div id="karta4" class="karta">
         <p><b>Креирајте свој догађај</b></p>
-        <a href="kreiraj.html"><img alt="kreiraj" src="img/kreiraj1.png"></a>
+        <a href="kreiraj.html" target="_blank"><img alt="kreiraj" src="img/kreiraj1.png"></a>
 
       </div>
     </div>
