--- a/pozoriste.html
+++ b/pozoriste.html
@@ -62,7 +62,7 @@
 
         </div>
     </nav>
-    <div class="jumbotron jumbotron-fluid bg-dark">
+    <div id="top" class="jumbotron jumbotron-fluid bg-dark">
         <div class="container">
             <h1 class="display-4 text-center font-weight-bold text-white">Vodič kroz Beogradska pozorišta</h1>
         </div>
@@ -287,23 +287,17 @@
             <div class="media-body" style="padding: 25px;">
                 <h5 class="mt-0 text-white">Zvezdara Teatar</h5>
 
-                <p class="mb-0 text-white">Jugoslovensko dramsko pozorište nalazi se u Ulici Kralja Milana, odmah do
-                    parka
-                    Manjež i nadomak trga Slavija, u samom centru Beograda. Osnovano je 1947. Godine kade je reditelj
-                    Bojan
-                    Stupica postavljen kao umetnički rukovodilac. Mnogi velikani glumačkog zanata iz ostalih
-                    jugoslovenskih
-                    zemalja učestvovali su u stvaranju ovog pozorišta. Sakupilo se 60 probranih glumaca, od kojih su i
-                    dan
-                    danas poznati Mira Stupica, Branka Veselinović, Mladja Veselinović i Marija Crnobori. Na mestu
-                    Jugoslovenskog dramskog pozorišta ranije je bila jahačka škola čija je konjušnica adaptirana i
-                    pretvorena u prvu scenu Jugoslovenskog dramskog pozorišta u Beogradu.
-                    3. Aprila 1984. Godine odigrana je prva predstava “Kralj Betajnove” u režiji Bojana Stupice.
-                    1977. godine 17. oktobra JDP je izgoreo do temelja zbog greške na instalacijama. Pozorište je
-                    rekonstruisano a Velika scena je ponovo otpočela sa radom 2003. godine, 23. Maja. Predstava koja je
-                    obeležila ponovno otvaranje JDP-a bila je delo Jovana Sterije popovića, “Rodoljupci”. Na repertoaru
-                    Jugoslovenskog dramskog pozorišta u Beogradu nalaze se mnogobrojna klasična dela pisaca kao što su
-                    Čehov, Ostrovski, Gorki, Šekspir, Molijer, Lorka i mnogih drugih.</p>
+                <p class="mb-0 text-white">Нескривена тајна популарности – успеха Звездаре театра почива на чињеници да
+                    је већина глумачких звезда – најбољих или најпопуларнијих београдских глумаца – прешла у тим са
+                    Звездаре, стварајући репрезентацију „извођача уметничких радова“, по дефиницији Зорана Радмиловића,
+                    који се преселио у сећање кад је ово позориште рођено. Бата Стојковић, Бора Тодоровић, Мира Ступица,
+                    Петар Краљ, Милена Дравић, Драган Николић, Лазар–Лаза Ристовски, Сека Саблић, Бранислав Лечић,
+                    Богдан Диклић, Љиља Драгутиновић, Милорад Мандић Манда, Бранимир Брстина, Воја Брајовић, Драган–Гаги
+                    Јовановић, Лане Гутовић… и још двадесетак великих, значајних имена нашег глумишта, оставили су, што
+                    би се некад рекло, „неизбрисив траг“ у животу, раду, репертоару – постојању куће на Звездари. Већина
+                    њихових незаборавних улога одиграна је у праизведбама драмских прича наших писаца, делима која су
+                    обогатила српску драмску књижевност. Тајна је и у томе да нема неке посебне тајне; све је било
+                    засновано на великом раду, ентузијазму и слободи стварања.</p>
             </div>
             <img src="img/poz/Zvezdara teatar 1.jpg" class="align-self-center mr-0 ml-0" alt="JDP">
         </div>
@@ -458,10 +452,15 @@
     </div>
 
     <footer>
-        <div id="row" style="float: right">
-            <img class="mr-3 ml-5 text-center" src="img/bb-logo.png" alt="logo">
-            <span class="mr-5 ml-3">&copy; Борисав Богдановић 2018</span>
-        </div>
+            <div class="row">
+                    <div class="col-sm-6">
+                        <a href="#top" class="ml-5">Idi na vrh</a>
+                    </div>
+                    <div class="col-sm-6">
+                        <span class="ml-5">&copy; Борисав Богдановић 2018</span>
+                        <img class="mr-5 ml-3" src="img/bb-logo.png" alt="logo">
+                    </div>
+                </div>
     </footer>
 
 
