--- a/bioskop.html
+++ b/bioskop.html
@@ -8,12 +8,12 @@
     <meta name="author" content="Borisav Bogdanovic">
     <link rel="shortcut icon" href="img/bb.png" />
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
-        integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+          integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 </head>
 
 <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-dark sticky-top">
-        <a class="navbar-brand text-white" href="index.html">Home</a>
+        <a class="navbar-brand text-white" href="index.html">Почетна</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
             aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -42,8 +42,8 @@
                         <a class="dropdown-item" target="_blank"
                             href="http://www.kinoteka.org.rs/repertoar-programi">Jugoslovenska kinoteka</a>
                         <div class="dropdown-divider"></div>
-                        <a class="dropdown-item" target="_blank" href="http://cinegrand-mcf.rs/na-repertoaru-danas">Cine
-                            Grand</a>
+                        <a class="dropdown-item" target="_blank"
+                           href="http://cinegrand-mcf.rs/na-repertoaru-danas">Cine Grand</a>
                         <div class="dropdown-divider"></div>
                         <a class="dropdown-item" target="_blank" href="http://www.bioskopfontana.rs/">Fontana</a>
                         <div class="dropdown-divider"></div>
@@ -59,7 +59,6 @@
         </div>
     </nav>
     <div class="jumbotron jumbotron-fluid" style="height: 150px;">
-
         <div class="container">
             <h1 class="display-4 text-center font-weight-bold">Vodič kroz Beogradske bioskope</h1>
         </div>
@@ -73,9 +72,8 @@
                 <li data-target="#carouselExampleIndicators" data-slide-to="3"></li>
                 <li data-target="#carouselExampleIndicators" data-slide-to="4"></li>
             </ol>
-
             <div class="carousel-inner">
-                <div class="carousel-item active">
+                <div class="carousel-item">
                     <img src="img/bio/aquaman_wide.jpg" class="d-block w-100" alt="Aquaman">
                 </div>
                 <div class="carousel-item">
@@ -87,7 +85,7 @@
                 <div class="carousel-item">
                     <img src="img/bio/us1651x702.jpg" class="d-block w-100" alt="us">
                 </div>
-                <div class="carousel-item">
+                <div class="carousel-item active">
                     <img src="img/bio/psi870x433.png" class="d-block w-100" alt="Psi umiru sami">
                 </div>
             </div>
@@ -280,13 +278,8 @@
         </div>
     </div>
     <section>
-        <div class="container">
-            <!-- <div class="row text-center"> -->
+        <div class="container">            
             <img src="img/bio/zabdodjijuce.jpg" class="img-thumbnail img-fluid ml-1 mr-5" alt="teret">
-
-
-
-            <!-- </div> -->
             <br>
             <br>
             <p>Samo još stariji sugrađani se mogu sećati nekadašnjih beogradskih bioskopa koji su poput velikih svetskih
@@ -455,7 +448,6 @@
                 otkupljivali sve karte „preko veze“ i ako si mogao maksimalno da kupiš 4 karte.</p>
 
             <br>
-
         </div>
     </section>
     <footer>
@@ -470,9 +462,6 @@
         </div>
     </footer>
 
-
-
-
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
         integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
         crossorigin="anonymous"></script>
@@ -480,8 +469,8 @@
         integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
         crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
-        integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous">
-        </script>
+        integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
+        crossorigin="anonymous"></script>
 
 </body>
 
