--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
 
 <head>
   <meta charset="UTF-8">
-  <!-- <meta name="viewport" content="width=device-width, initial-scale=1.0"> -->
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Kulturni vodič kroz Beograd</title>
   <link rel="stylesheet" href="css/style.css">
-  <!-- <link rel="stylesheet" href="../bootstrap/css/bootstrap"> -->
+
   <link href="https://fonts.googleapis.com/css?family=Noto+Serif+SC" rel="stylesheet">
   <link rel="shortcut icon" href="img/bb.png" />
-  
+
 </head>
 
 <body>
@@ -23,11 +23,12 @@
     </div>
     <div id="navbar">
       <ul>
-        <li><a href="#home">Home</a></li>
+        <li><a href="#home">Почетна</a></li>
         <li><a href="bioskop.html">Биоскопи</a></li>
         <li><a href="pozoriste.html">Позоришта</a></li>
         <li><a href="muzej.html">Музеји</a></li>
-        <li><a href="http://www.urbanbug.net/kalendar-desavanja/umetnost-i-kultura" target="_blank">Актуелно</a></li>
+        <li><a href="http://www.urbanbug.net/kalendar-desavanja/umetnost-i-kultura"
+               target="_blank">Актуелно</a></li>
 
         <li style="float:right"><a href="kreiraj.html" target="_blank">Креирај догађај</a></li>
       </ul>
@@ -51,17 +52,19 @@
       <div id="karta4" class="karta">
         <p><b>Креирајте свој догађај</b></p>
         <a href="kreiraj.html" target="_blank"><img alt="kreiraj" src="img/kreiraj1.png"></a>
-
       </div>
     </div>
     <div id="aside">
       <video width="320" height="180" controls>
-        <source src="vid/Beograd vikendi.mp4" type="video/mp4"></video>
+        <source src="vid/Beograd_vikendi.mp4" type="video/mp4">
+      </video>
       <iframe width="320" height="180" src="https://www.youtube.com/embed/SSp_mJQR3Z0" frameborder="0"
-        allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
+      </iframe>
 
       <video width="320" height="180" controls>
-        <source src="vid/Kultura_FEST.mp4" type="video/mp4"></video>
+        <source src="vid/Kultura_FEST.mp4" type="video/mp4">
+      </video>
 
 
     </div>
