--- a/muzej.html
+++ b/muzej.html
@@ -13,7 +13,7 @@
 
 <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-dark sticky-top">
-        <a class="navbar-brand text-white" href="index.html">Home</a>
+        <a class="navbar-brand text-white" href="index.html">Почетна</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
             aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -48,7 +48,6 @@
                         <a class="dropdown-item" target="_blank"
                             href="http://www.crvenazvezdafk.com/scc/strana/12/muzej">Музеј фк Црвена звезда</a>
                         <div class="dropdown-divider"></div>
-
                     </div>
                 </li>
             </ul>
@@ -72,40 +71,38 @@
                 <li data-target="#carouselExampleIndicators" data-slide-to="4"></li>
                 <li data-target="#carouselExampleIndicators" data-slide-to="5"></li>
                 <li data-target="#carouselExampleIndicators" data-slide-to="6"></li>
-
-
             </ol>
             <div class="carousel-inner">
                 <div class="carousel-item active">
-                    <img src="img/muz/karusel/Narodni muzej - stalna postava.jpg" class="d-block w-100" alt="Narodni">
+                    <img src="img/muz/karusel/Narodni_muzej-stalna_postava.jpg" class="d-block w-100" alt="Narodni">
                     <div class="carousel-caption d-none d-md-block">
                         <h5>Narodni Muzej</h5>
                         <p>stalna postavka</p>
                     </div>
                 </div>
                 <div class="carousel-item">
-                    <img src="img/muz/karusel/Izlozba fotografija.jpg" class="d-block w-100" alt="foto">
+                    <img src="img/muz/karusel/Izlozba_fotografija.jpg" class="d-block w-100" alt="foto">
                     <div class="carousel-caption d-none d-md-block">
                         <h5>Галерија Дар-Мар</h5>
                         <p>изложба фотографија</p>
                     </div>
                 </div>
                 <div class="carousel-item">
-                    <img src="img/muz/karusel/Etnografski stalna postavka.jpg" class="d-block w-100" alt="etno">
+                    <img src="img/muz/karusel/Etnografski_stalna_postavka.jpg" class="d-block w-100" alt="etno">
                     <div class="carousel-caption d-none d-md-block">
                         <h5>Етнографски музеј</h5>
                         <p>Стална поставка</p>
                     </div>
                 </div>
                 <div class="carousel-item">
-                    <img src="img/muz/karusel/muzej Nikole Tesle.jpg" class="d-block w-100" alt="tesla">
+                    <img src="img/muz/karusel/Muzej_Nikole_Tesle.jpg" class="d-block w-100" alt="tesla">
                     <div class="carousel-caption d-none d-md-block">
                         <h5>Музеј Николе Тесле</h5>
                         <p>"Стална поставка"</p>
                     </div>
                 </div>
                 <div class="carousel-item">
-                    <img src="img/muz/karusel/Etnografski studenti.jpg" class="d-block w-100" alt="studenti">
+                    <img src="img/muz/karusel/Etnografski_studenti.jpg" class="d-block w-100" alt="studenti">
                     <div class="carousel-caption d-none d-md-block">
                         <h5>Galerija Istorijskog arhiva Beograda</h5>
                         <p>"Vekovi Beograda"</p>
@@ -119,7 +116,7 @@
                     </div>
                 </div>
                 <div class="carousel-item">
-                    <img src="img/muz/karusel/Vladislav Titelbah - cilimska radionica.jpg" class="d-block w-100"
+                    <img src="img/muz/karusel/Vladislav_Titelbah-cilimska_radionica.jpg" class="d-block w-100"
                         alt="Psi umiru sami">
                     <div class="carousel-caption d-none d-md-block">
                         <h5>Историјски музеј Србије</h5>
@@ -144,14 +141,12 @@
 
             <div class="media-body" style="padding: 25px;">
                 <h5 class="mt-0 text-white">Народни музеј</h5>
-
                 <p class="mb-0 text-white">Народни музеј основан је указом министра просвете Јована Стерије Поповића,
                     10. маја 1844. године, као Музеум сербски, који је на једном месту требало да сабере старине и да их
                     за потомство сачува. Организован у првим деценијама свог рада и као установа заштите и као научна,
                     истраживачка установа, која је конституисала национални идентитет и била пресудан актер у развоју
                     заштите баштине, Народни музеј је убрзо прерастао у званичног репрезента државе и друштва, сведочећи
                     и о могућој снази културе и музеја у Србији.
-
                     Интензивној делатност прикупљања и развоја збирки, придружен је убрзо и разноврстан истраживачки
                     рад, који је преобразио Музеј од складишта прошлости у приказивачки, демонстрациони изложбени
                     простор. Међуратне године двадесетог века довеле су до велике трансформације, у којој су изложбе,
@@ -164,16 +159,13 @@
         <hr class="mt-0 mb-0">
         <div class="row media bg-dark" style="padding-left: 30px; padding-right: 50px; width: 100%;">
             <img src="img/muz/avijacije1.jpg" class="align-self-center mr-0 ml-0" alt="Muzej avijacije">
-
             <div class="media-body" style="padding: 25px;">
                 <h5 class="mt-0 text-white">Музеј авијације</h5>
-
                 <p class="mb-0 text-white">Овај мали али јединствени музеј налази се у непосредној близини Никола Тесла
                     аеродрома у Београду, на око пет минута лаганог хода од главног терминала. Зграда има јединствен
                     дизајн у стаклу а унутра се могу наћи разне занимљиве атракције и изложбе. Музеј поседује одличну
                     колекцију летелица које су некада пропадале војсци, као и олупине америчких Ф-117 “Night Hawk” и
-                    Ф-16
-                    “Fighting Falcon” летелица које су оборене за време Нато бомбардовања 1999. године.
+                    Ф-16 “Fighting Falcon” летелица које су оборене за време Нато бомбардовања 1999. године.
                     Поред колекције летелица, музеј такође поседује велику колекцију уџбеника, докумената, фотографија,
                     радара и пројектила као и разне аеронаутичке опреме и других артикала. Занимљива локација за
                     посетити, не само за ентузијасте за авијацију већ и за било кога ко жели да научи нешто ново.
@@ -183,7 +175,6 @@
                     у Србији, пилот Едвард Русјан отиснуо се изнад Калемегданске тврђаве. Тог дана временски услови били
                     су лоши и снажан ветар учинио је да се једно од крила распадне што је довело до рушења летелице и
                     трагичне смрти њеног пилота.
-
                 </p>
             </div>
             <img src="img/muz/avijacije2.jpg" class="align-self-center mr-0 ml-0" alt="Muzej avijacije">
@@ -191,10 +182,8 @@
         <hr class="mt-0 mb-0">
         <div class="row media bg-dark" style="padding-left: 30px; padding-right: 50px; width: 100%;">
             <img src="img/muz/vojni-muzej1.jpg" class="align-self-center mr-0 ml-0" alt="Muzej avijacije">
-
             <div class="media-body" style="padding: 25px;">
                 <h5 class="mt-0 text-white">Војни музеј</h5>
-
                 <p class="mb-0 text-white">Овај музеј сматра се једном од локација које сваки посетиоц мора видети у
                     Београду. Колекција је изузетно велика и покрива српску војну историју још од 7. века. Музеј се
                     налази на Калеменгдану што га чини још погоднијим за посету. Првобитно га је изградио Милан
@@ -225,7 +214,6 @@
                     истраживачким и педагошким радом, интензивном међународном сарадњом и отвореношћу за различите
                     облике културних активности и сарадње, представља важан чинилац уметничког и културног живота
                     Београда и Србије.
-
                 </p>
             </div>
             <img src="img/muz/msu2.jpg" class="align-self-center mr-0 ml-0" alt="MSU">
@@ -233,10 +221,8 @@
         <hr class="mt-0 mb-0">
         <div class="row media bg-dark" style="padding-left: 30px; padding-right: 50px; width: 100%;">
             <img src="img/muz/etnografski1.jpg" class="align-self-center mr-0 ml-0" alt="Etnografski muzej">
-
             <div class="media-body" style="padding: 25px;">
                 <h5 class="mt-0 text-white">Етнографски музеј</h5>
-
                 <p class="mb-0 text-white">Етнографски музеј у Београду је основан 1901. издвајањем Етнографског одељења
                     из оквира Народног музеја. Предлог и идејно-теоријску основу за стварање музеја у коме ће се
                     изучавати народни живот саставио је историчар Стојан Новаковић, редовни члан Српског ученог друштва
@@ -257,10 +243,8 @@
         <hr class="mt-0 mb-0">
         <div class="row media bg-dark" style="padding-left: 30px; padding-right: 50px; width: 100%;">
             <img src="img/muz/mpu1.jpg" class="align-self-center mr-0 ml-0" alt="JDP">
-
             <div class="media-body" style="padding: 25px;">
                 <h5 class="mt-0 text-white">Музеј примењене уметности</h5>
-
                 <p class="mb-0 text-white">Музеј примењене уметности основан је 6. новембра 1950. године и припада
                     категорији уметничких музеја специјализованог типа. Основна делатност Музеја је да систематски
                     прикупља, штити, чува, проучава, излаже и публикује предмете примењене уметности. Поред дела
@@ -289,8 +273,6 @@
         </div>
     </footer>
 
-
-
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
         integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
         crossorigin="anonymous"></script>
@@ -299,7 +281,7 @@
         crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
         integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous">
-        </script>
+    </script>
 
 </body>
 
